# CompressPatch

./: .clang-format  .gitignore  CMakeLists.txt  Item.h  PatchCompressor.cpp  PatchCompressor.h  Readme.md  main.cpp
data/: patch.7z
include/: Item.h  PatchCompressor.h  PatchMapKind.h  VariableLengthEncoder.h
src/: PatchCompressor.cpp  VariableLengthEncoder.cpp  main.cpp
test/: main.cpp
